# headless_web_wifi_provisioner

./: .gitignore  ARCH_REFACTORING.md  Cargo.toml  README.md  configs.toml
.github/workflows/: release-build.yml
audio/: README.md
config/: wpa_ctrl.toml  wpa_dbus.toml
configs/: nmcli_tdm.toml  nmdbus_tdm.toml  wpa_cli_tdm.toml  wpa_dbus_tdm.toml
docs/: api.md  wpa_cli_dnsmasq使用说明.md  成功运行的日志.md  配网操作
provisioner-core/: Cargo.toml  build.rs
provisioner-core/src/: config.rs  factory.rs  lib.rs  traits.rs  web_server.rs
provisioner-core/src/backends/: dbus_backend.rs  mock_backend.rs  mod.rs  utils.rs
provisioner-core/src/backends/mock/: mod.rs
provisioner-core/src/backends/networkmanager_TDM/: mod.rs
provisioner-core/src/backends/nmcli_TDM/: mod.rs
provisioner-core/src/backends/nmdbus_tdm/: mod.rs
provisioner-core/src/backends/systemd_networkd/: mod.rs
provisioner-core/src/backends/wpa_cli_TDM/: mod.rs
provisioner-core/src/backends/wpa_cli_dnsmasq/: mod.rs
provisioner-core/src/backends/wpa_cli_exclusive/: mod.rs
provisioner-core/src/backends/wpa_cli_exclusive2/: mod.rs
provisioner-core/src/backends/wpa_dbus_TDM/: mod.rs
provisioner-core/src/backends/wpa_supplicant_dbus/: dhcp.rs  mod.rs
provisioner-core/src/frontends/: disk_frontend.rs  embed_frontend.rs  mod.rs
provisioner-core/src/frontends/provider_disk/: mod.rs
provisioner-core/src/frontends/provider_embed/: mod.rs
provisioner-daemon/: Cargo.toml  build.rs
provisioner-daemon/src/: main.rs  runner.rs
provisioner-daemon/src/policy/: daemon_if_disconnected.rs  mod.rs  on_start.rs
simple-provisioner-wpadbus/: COMPLETION_SUMMARY.md  Cargo.toml  INDEX.md  PROJECT_OVERVIEW.md  QUICKSTART.md  README.md
simple-provisioner-wpadbus/src/: config.rs  main.rs  web_server.rs
simple-provisioner-wpadbus/ui/: app.js  index.html
src/: audio.rs  backend.rs  config.rs  embed.rs  lib.rs  main.rs  structs.rs  traits.rs  web_server.rs
src/backend/: commands.rs  mod.rs  parsing.rs  setup.rs
ui/: app.js  index.html  style.css
ui/themes/bootstrap/: app.js  style.css
ui/themes/echo-mate/: app.js  index.html  style.css
ui/themes/radxa_x4/: app.js  index.html  style.css
ui/themes/simple/: index.html  style.css
