[workspace]

[package]
name = "provisioner"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", features = ["full"] }

# Web 框架
axum = "0.8.6"
tower-http = { version = "0.6.6", features = ["fs"] }

# wpa_supplicant 控制接口
wpa-ctrl = "0.2.1"

# Hex 编码（用于处理特殊字符的 SSID）
hex = "0.4"

# 序列化与反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# 配置与错误处理
toml = "0.9.8"
once_cell = "1.19"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
