[workspace]

[package]
name = "provisioner"
version = "0.1.0"
edition = "2024"

[dependencies]
# 异步运行时
tokio = { version = "1", default-features = false, features = [
    "rt-multi-thread", 
    "macros",          
    "net",             
    "fs",              
    "process",         
    "sync",            
    "time",
    "io-util",
] }

# Web 框架
axum = "0.8.6"
tower-http = { version = "0.6.6" }

# wpa_supplicant 控制接口
wpa-ctrl = "0.3.0"

# Hex 编码（用于处理特殊字符的 SSID）
hex = "0.4"

# 序列化与反序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"

# 配置与错误处理
toml = "0.9.8"
once_cell = "1.19"
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 嵌入 UI 资源
rust-embed = "8.3.0"

# 异步 Trait 支持
async-trait = "0.1.79"

# MIME 类型推断
mime_guess = "2.0.5"

[features]
default = []
# 语音播报特性
audio = []


# release 配置
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
