[package]
name = "provisioner-core"
# 版本和 edition 会自动从 workspace 继承
version.workspace = true
edition.workspace = true

[dependencies]
# 核心依赖 (始终需要)
tokio = { workspace = true, features = ["full"] }
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow = "1.0"
log = { version = "0.4", optional = false }
# DHCP implementation is in-provisioner-core backend now; no external edge-dhcp dependency

# === 可选依赖 (由 Features 控制) ===
zbus = { workspace = true, optional = true }
zbus_macros = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
# DHCP runner is now implemented inside this crate's backend; no external runner required

# --- 交付方式依赖 ---
rust-embed = { workspace = true }
tower-http = { workspace = true, optional = true } # for DiskFrontend
mime_guess = { workspace = true }


[features]
# 默认特性为空
default = []

# === 1. 后端实现选择 (隐式决定交付方式) ===
backend_wpa_dbus = ["zbus", "zbus_macros", "futures-util", "libc"] # Real backend -> embed
backend_systemd = []             # Real backend -> embed (uses always-present deps)
backend_wpa_cli = []               # Real backend -> embed (uses wpa_cli and dnsmasq)
backend_wpa_cli_exclusive = []   # Real backend -> embed (uses wpa_cli, hostapd and dnsmasq)
backend_wpa_cli_exclusive2 = []  # Real backend -> embed (exclusive2: initial STA scan then AP)
backend_mock = ["dep:tower-http"]                # Mock backend -> disk

# === 2. UI 主题选择 ===
ui_echo_mate = []