[package]
name = "provisioner-core"
# 版本和 edition 会自动从 workspace 继承
version.workspace = true
edition.workspace = true

[dependencies]
# 核心依赖 (始终需要)
tokio = { workspace = true, features = ["full"] }
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow = "1.0"
log = { version = "0.4", optional = false }
# DHCP implementation is in-provisioner-core backend now; no external edge-dhcp dependency

# === 可选依赖 (由 Features 控制) ===
zbus = { workspace = true, optional = true }
zbus_macros = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }
# DHCP runner is now implemented inside this crate's backend; no external runner required

# --- 交付方式依赖 ---
rust-embed = { workspace = true }
tower-http = { workspace = true, optional = true } # for DiskFrontend
mime_guess = { workspace = true }


[features]
# 默认特性为空
default = []

# === 1. 后端实现选择 (仅保留三个后端) ===
# 保留：wpa_cli_TDM (时分复用)、networkmanager_TDM、mock
backend_wpa_cli_TDM = []
backend_mock = ["dep:tower-http"]
backend_networkmanager_TDM = []

# === 2. UI 主题选择 ===
ui_echo_mate = []
ui_radxa_x4 = []