[package]
name = "provisioner-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
axum.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror.workspace = true
tracing.workspace = true
async-trait.workspace = true
anyhow = "1.0"
log = { version = "0.4", optional = false }
toml = "0.9.8"
once_cell = "1.19"

# 由 Features 控制
zbus = { workspace = true, optional = true }
zbus_macros = { workspace = true, optional = true }
futures-util = { version = "0.3", optional = true }
libc = { version = "0.2", optional = true }

# --- 交付方式依赖 ---
rust-embed = { workspace = true }
tower-http = { workspace = true, optional = true } # for DiskFrontend
mime_guess = { workspace = true }


[features]
# 默认特性为空
default = []

# === 1. 后端实现选择 ===
backend_wpa_cli_TDM = []
backend_wpa_dbus_TDM = ["dep:zbus", "dep:zbus_macros"]
backend_mock_concurrent = ["dep:tower-http"]
backend_mock_TDM = ["dep:tower-http"]
backend_nmcli_TDM = []
backend_nmdbus_TDM = ["dep:zbus", "dep:zbus_macros"]

# === 2. UI 主题选择 ===
ui_echo_mate = []
ui_radxa_x4 = []