[package]
name = "provisioner-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }

# 依赖本地的 `provisioner-core` Crate
provisioner-core = { path = "../provisioner-core", default-features = false }


[features]
# 定义自己的特性，然后"转发" 给 core Crate。
# 这让我们可以从顶层通过 `provisioner-daemon/<feature>` 来控制所有编译。
backend_wpa_dbus = ["provisioner-core/backend_wpa_dbus"]
backend_systemd = ["provisioner-core/backend_systemd"]
backend_mock = ["provisioner-core/backend_mock"]
backend_wpa_cli = ["provisioner-core/backend_wpa_cli"]
backend_wpa_cli_exclusive = ["provisioner-core/backend_wpa_cli_exclusive"]
backend_wpa_cli_TDM = ["provisioner-core/backend_wpa_cli_TDM"]
backend_networkmanager_TDM = ["provisioner-core/backend_networkmanager_TDM"]


# 前端界面
ui_echo_mate = ["provisioner-core/ui_echo_mate"]
ui_radxa_x4 = ["provisioner-core/ui_radxa_x4"]

# --- Policy（启动策略） ---
# policy_on_start: 启动时始终进入配网模式（默认行为）
# policy_daemon_if_disconnected: 仅当系统未连接 Wi-Fi 时才进入配网模式（守护进程风格）
policy_on_start = []
policy_daemon_if_disconnected = []